[gd_scene load_steps=6 format=2]

[ext_resource path="res://tests/links/links.gd" type="Script" id=1]
[ext_resource path="res://fonts/PermanentMarker_18.tres" type="FontFile" id=2]
[ext_resource path="res://assets/background.png" type="Texture2D" id=3]
[ext_resource path="res://fonts/PermanentMarker_30.tres" type="FontFile" id=4]
[ext_resource path="res://assets/buttons/normal_button.tscn" type="PackedScene" id=5]


[node name="links" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
offset_left = 376.0
offset_top = 13.0
offset_right = 498.0
offset_bottom = 52.0
custom_fonts/font = ExtResource( 4 )
text = "Links Tests"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" parent="." instance=ExtResource( 5 )]
offset_right = 190.354
offset_bottom = 44.6465
label = "Back"

[node name="test_links" parent="." instance=ExtResource( 5 )]
offset_top = 65.0
offset_right = 190.0
offset_bottom = 110.0
label = "Test Links"

[node name="console" type="RichTextLabel" parent="."]
offset_left = 250.586
offset_top = 117.012
offset_right = 946.586
offset_bottom = 522.012
bbcode_enabled = true
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_check" type="CheckBox" parent="." groups=[
"tests",
]]
offset_left = 10.0
offset_top = 131.0
offset_right = 34.0
offset_bottom = 155.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="login_check"]
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
custom_fonts/font = ExtResource( 2 )
text = "Login"

[node name="unguessable_link_check" type="CheckBox" parent="." groups=[
"tests",
]]
offset_left = 10.0
offset_top = 155.0
offset_right = 34.0
offset_bottom = 179.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="unguessable_link_check"]
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
custom_fonts/font = ExtResource( 2 )
text = "Unguessable Link"

[node name="guessable_link_check" type="CheckBox" parent="." groups=[
"tests",
]]
offset_left = 10.0
offset_top = 179.0
offset_right = 34.0
offset_bottom = 203.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="guessable_link_check"]
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
custom_fonts/font = ExtResource( 2 )
text = "Guessable Link"

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="test_links" to="." method="_on_test_links_pressed"]
